create a photo-grid block

--- a/index.html
+++ b/index.html
@@ -31,6 +31,53 @@
         </div>
         <button class="profile__add-button" type="button"></button>
       </section>
+
+      <section class="photo-grid">
+        <ul class="photo-grid__list">
+          <li class="photo-grid__item">
+            <img class="photo-grid__image" src="./images/image_1.jpg" alt="Церковь в горах" />
+            <div class="photo-grid__info">
+              <h2 class="photo-grid__title">Карачаевск</h2>
+              <button class="photo-grid__like" type="button"></button>
+            </div>
+          </li>
+          <li class="photo-grid__item">
+            <img class="photo-grid__image" src="./images/image_2.jpg" alt="Гора Эльбрус" />
+            <div class="photo-grid__info">
+              <h2 class="photo-grid__title">Гора Эльбрус</h2>
+              <button class="photo-grid__like" type="button"></button>
+            </div>
+          </li>
+          <li class="photo-grid__item">
+            <img class="photo-grid__image" src="./images/image_3.jpg" alt="Домбай" />
+            <div class="photo-grid__info">
+              <h2 class="photo-grid__title">Домбай</h2>
+              <button class="photo-grid__like" type="button"></button>
+            </div>
+          </li>
+          <li class="photo-grid__item">
+            <img class="photo-grid__image" src="./images/image_4.jpg" alt="Гора Эльбрус" />
+            <div class="photo-grid__info">
+              <h2 class="photo-grid__title">Гора Эльбрус</h2>
+              <button class="photo-grid__like" type="button"></button>
+            </div>
+          </li>
+          <li class="photo-grid__item">
+            <img class="photo-grid__image" src="./images/image_5.jpg" alt="Домбай" />
+            <div class="photo-grid__info">
+              <h2 class="photo-grid__title">Домбай</h2>
+              <button class="photo-grid__like" type="button"></button>
+            </div>
+          </li>
+          <li class="photo-grid__item">
+            <img class="photo-grid__image" src="./images/image_6.jpg" alt="Церковь в горах" />
+            <div class="photo-grid__info">
+              <h2 class="photo-grid__title">Карачаево-Черкесия</h2>
+              <button class="photo-grid__like" type="button"></button>
+            </div>
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
