--- a/index.html
+++ b/index.html
@@ -79,5 +79,9 @@
         </ul>
       </section>
     </main>
+
+    <footer class="footer">
+      <p class="footer__copyright">© 2020 Mesto Russia</p>
+    </footer>
   </body>
 </html>
