create a popup block

--- a/index.html
+++ b/index.html
@@ -35,42 +35,66 @@
       <section class="photo-grid">
         <ul class="photo-grid__list">
           <li class="photo-grid__item">
-            <img class="photo-grid__image" src="./images/image_1.jpg" alt="Церковь в горах" />
+            <img
+              class="photo-grid__image"
+              src="./images/image_1.jpg"
+              alt="Церковь в горах"
+            />
             <div class="photo-grid__info">
               <h2 class="photo-grid__title">Карачаевск</h2>
               <button class="photo-grid__like" type="button"></button>
             </div>
           </li>
           <li class="photo-grid__item">
-            <img class="photo-grid__image" src="./images/image_2.jpg" alt="Гора Эльбрус" />
+            <img
+              class="photo-grid__image"
+              src="./images/image_2.jpg"
+              alt="Гора Эльбрус"
+            />
             <div class="photo-grid__info">
               <h2 class="photo-grid__title">Гора Эльбрус</h2>
               <button class="photo-grid__like" type="button"></button>
             </div>
           </li>
           <li class="photo-grid__item">
-            <img class="photo-grid__image" src="./images/image_3.jpg" alt="Домбай" />
+            <img
+              class="photo-grid__image"
+              src="./images/image_3.jpg"
+              alt="Домбай"
+            />
             <div class="photo-grid__info">
               <h2 class="photo-grid__title">Домбай</h2>
               <button class="photo-grid__like" type="button"></button>
             </div>
           </li>
           <li class="photo-grid__item">
-            <img class="photo-grid__image" src="./images/image_4.jpg" alt="Гора Эльбрус" />
+            <img
+              class="photo-grid__image"
+              src="./images/image_4.jpg"
+              alt="Гора Эльбрус"
+            />
             <div class="photo-grid__info">
               <h2 class="photo-grid__title">Гора Эльбрус</h2>
               <button class="photo-grid__like" type="button"></button>
             </div>
           </li>
           <li class="photo-grid__item">
-            <img class="photo-grid__image" src="./images/image_5.jpg" alt="Домбай" />
+            <img
+              class="photo-grid__image"
+              src="./images/image_5.jpg"
+              alt="Домбай"
+            />
             <div class="photo-grid__info">
               <h2 class="photo-grid__title">Домбай</h2>
               <button class="photo-grid__like" type="button"></button>
             </div>
           </li>
           <li class="photo-grid__item">
-            <img class="photo-grid__image" src="./images/image_6.jpg" alt="Церковь в горах" />
+            <img
+              class="photo-grid__image"
+              src="./images/image_6.jpg"
+              alt="Церковь в горах"
+            />
             <div class="photo-grid__info">
               <h2 class="photo-grid__title">Карачаево-Черкесия</h2>
               <button class="photo-grid__like" type="button"></button>
@@ -83,5 +107,42 @@
     <footer class="footer">
       <p class="footer__copyright">© 2020 Mesto Russia</p>
     </footer>
+
+    <section class="popup">
+      <div class="popup__container">
+        <button
+          class="popup__close-button"
+          type="button"
+          aria-label="Закрыть"
+        ></button>
+        <form class="popup__form">
+          <div class="popup__main-container">
+            <h2 class="popup__form-heading">Редактировать профиль</h2>
+            <fieldset class="popup__form-input-container">
+              <input
+                class="popup__name-input"
+                type="text"
+                placeholder="Имя"
+                required
+              />
+              <input
+                class="popup__job-input"
+                type="text"
+                placeholder="О себе"
+                required
+              />
+            </fieldset>
+            <fieldset class="popup__form-handlers">
+              <input
+                class="popup__form-submit"
+                type="submit"
+                value="Сохранить"
+              />
+            </fieldset>
+          </div>
+        </form>
+      </div>
+    </section>
+    <script src="script.js"></script>
   </body>
 </html>
