--- a/index.html
+++ b/index.html
@@ -115,29 +115,29 @@
           type="button"
           aria-label="Закрыть"
         ></button>
-        <form class="popup__form">
+        <h2 class="popup__form-heading">Редактировать профиль</h2>
+        <form class="popup__form" name="edit-profile">
           <div class="popup__main-container">
-            <h2 class="popup__form-heading">Редактировать профиль</h2>
             <fieldset class="popup__form-input-container">
               <input
-                class="popup__name-input"
+                class="popup__text-input popup__text-input_edit_name-profile"
                 type="text"
+                name="popup__text-input_edit_name-profile"
                 placeholder="Имя"
                 required
               />
               <input
-                class="popup__job-input"
+                class="popup__text-input popup__text-input_edit_job-profile"
                 type="text"
+                name="popup__text-input_edit_job-profile"
                 placeholder="О себе"
                 required
               />
             </fieldset>
             <fieldset class="popup__form-handlers">
-              <input
-                class="popup__form-submit"
-                type="submit"
-                value="Сохранить"
-              />
+              <button class="popup__form-submit" type="submit">
+                Сохранить
+              </button>
             </fieldset>
           </div>
         </form>
