refactor alt-text

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <img
               class="photo-grid__image"
               src="./images/image_2.jpg"
-              alt="Гора Эльбрус"
+              alt="Вид на равнину, вдалеке виднеется гора Эльбрус"
             />
             <div class="photo-grid__info">
               <h2 class="photo-grid__title">Гора Эльбрус</h2>
@@ -60,7 +60,7 @@
             <img
               class="photo-grid__image"
               src="./images/image_3.jpg"
-              alt="Домбай"
+              alt="Горный лес, на заднем плане виден горный хребет Домбай"
             />
             <div class="photo-grid__info">
               <h2 class="photo-grid__title">Домбай</h2>
@@ -71,7 +71,7 @@
             <img
               class="photo-grid__image"
               src="./images/image_4.jpg"
-              alt="Гора Эльбрус"
+              alt="Вид на равнину, вдалеке виднеется гора Эльбрус"
             />
             <div class="photo-grid__info">
               <h2 class="photo-grid__title">Гора Эльбрус</h2>
@@ -82,7 +82,7 @@
             <img
               class="photo-grid__image"
               src="./images/image_5.jpg"
-              alt="Домбай"
+              alt="Горный лес, на заднем плане виден горный хребет Домбай"
             />
             <div class="photo-grid__info">
               <h2 class="photo-grid__title">Домбай</h2>
