--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./pages/index.css" />
-    <title>Document</title>
+    <title>Mesto</title>
   </head>
   <body class="page">
     <header class="header">
@@ -134,11 +134,7 @@
                 required
               />
             </fieldset>
-            <fieldset class="popup__form-handlers">
-              <button class="popup__form-submit" type="submit">
-                Сохранить
-              </button>
-            </fieldset>
+            <button class="popup__form-submit" type="submit">Сохранить</button>
           </div>
         </form>
       </div>
