--- a/index.html
+++ b/index.html
@@ -139,6 +139,6 @@
         </form>
       </div>
     </section>
-    <script src="script.js"></script>
+    <script src="scripts/index.js"></script>
   </body>
 </html>
