--- a/index.html
+++ b/index.html
@@ -139,6 +139,39 @@
         </form>
       </div>
     </section>
+
+    <section class="popup popup_add-card">
+      <div class="popup__container">
+        <button
+          class="popup__close-button popup__close-button_add-card"
+          type="button"
+          aria-label="Закрыть"
+        ></button>
+        <h2 class="popup__form-heading">Новое место</h2>
+        <form class="popup__form popup__form_element_add-card" name="add-card">
+          <div class="popup__main-container">
+            <fieldset class="popup__form-input-container">
+              <input
+                class="popup__text-input popup__text-input_element_name-add-card"
+                type="text"
+                name="popup__text-input_element_name-add-card"
+                placeholder="Название"
+                required
+              />
+              <input
+                class="popup__text-input popup__text-input_element_link-add-card"
+                type="text"
+                name="popup__text-input_element_link-add-card"
+                placeholder="Ссылка на картинку"
+                required
+              />
+            </fieldset>
+            <button class="popup__form-submit" type="submit">Создать</button>
+          </div>
+        </form>
+      </div>
+    </section>
+
     <script src="scripts/index.js"></script>
   </body>
 </html>
