add template initial cards

--- a/index.html
+++ b/index.html
@@ -34,72 +34,7 @@
 
       <section class="photo-grid">
         <ul class="photo-grid__list">
-          <li class="photo-grid__item">
-            <img
-              class="photo-grid__image"
-              src="./images/image_1.jpg"
-              alt="Церковь в горах"
-            />
-            <div class="photo-grid__info">
-              <h2 class="photo-grid__title">Карачаевск</h2>
-              <button class="photo-grid__like" type="button"></button>
-            </div>
-          </li>
-          <li class="photo-grid__item">
-            <img
-              class="photo-grid__image"
-              src="./images/image_2.jpg"
-              alt="Вид на равнину, вдалеке виднеется гора Эльбрус"
-            />
-            <div class="photo-grid__info">
-              <h2 class="photo-grid__title">Гора Эльбрус</h2>
-              <button class="photo-grid__like" type="button"></button>
-            </div>
-          </li>
-          <li class="photo-grid__item">
-            <img
-              class="photo-grid__image"
-              src="./images/image_3.jpg"
-              alt="Горный лес, на заднем плане виден горный хребет Домбай"
-            />
-            <div class="photo-grid__info">
-              <h2 class="photo-grid__title">Домбай</h2>
-              <button class="photo-grid__like" type="button"></button>
-            </div>
-          </li>
-          <li class="photo-grid__item">
-            <img
-              class="photo-grid__image"
-              src="./images/image_4.jpg"
-              alt="Вид на равнину, вдалеке виднеется гора Эльбрус"
-            />
-            <div class="photo-grid__info">
-              <h2 class="photo-grid__title">Гора Эльбрус</h2>
-              <button class="photo-grid__like" type="button"></button>
-            </div>
-          </li>
-          <li class="photo-grid__item">
-            <img
-              class="photo-grid__image"
-              src="./images/image_5.jpg"
-              alt="Горный лес, на заднем плане виден горный хребет Домбай"
-            />
-            <div class="photo-grid__info">
-              <h2 class="photo-grid__title">Домбай</h2>
-              <button class="photo-grid__like" type="button"></button>
-            </div>
-          </li>
-          <li class="photo-grid__item">
-            <img
-              class="photo-grid__image"
-              src="./images/image_6.jpg"
-              alt="Церковь в горах"
-            />
-            <div class="photo-grid__info">
-              <h2 class="photo-grid__title">Карачаево-Черкесия</h2>
-              <button class="photo-grid__like" type="button"></button>
-            </div>
-          </li>
+
         </ul>
       </section>
     </main>
@@ -171,6 +106,20 @@
         </form>
       </div>
     </section>
+
+    <template class="template-cards">
+      <li class="photo-grid__item">
+        <img
+          class="photo-grid__image"
+          src=""
+          alt=""
+        />
+        <div class="photo-grid__info">
+          <h2 class="photo-grid__title"></h2>
+          <button class="photo-grid__like" type="button"></button>
+        </div>
+      </li>
+    </template>
 
     <script src="scripts/index.js"></script>
   </body>
