add delete cards

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
           src=""
           alt=""
         />
+        <button class="photo-grid__delete-button" type="button"></button>
         <div class="photo-grid__info">
           <h2 class="photo-grid__title"></h2>
           <button class="photo-grid__like" type="button"></button>
