open popup image

--- a/index.html
+++ b/index.html
@@ -107,6 +107,20 @@
       </div>
     </section>
 
+    <section class="popup popup_overview">
+      <div class="popup__container popup__container-overview">
+        <button
+          class="popup__close-button popup__close-button_overview"
+          type="button"
+          aria-label="Закрыть"
+        ></button>
+        <div class="overview">
+          <img class="overview__image" src="" alt="" />
+          <p class="overview__title"></p>
+        </div>
+      </div>
+    </section>
+
     <template class="template-cards">
       <li class="photo-grid__item">
         <img
