fix after the test

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           aria-label="Закрыть"
         ></button>
         <div class="overview">
-          <img class="overview__image" src="" alt="" />
+          <img class="overview__image" src="#" alt="#" />
           <p class="overview__title"></p>
         </div>
       </div>
@@ -125,8 +125,8 @@
       <li class="photo-grid__item">
         <img
           class="photo-grid__image"
-          src=""
-          alt=""
+          src="#"
+          alt="#"
         />
         <button class="photo-grid__delete-button" type="button"></button>
         <div class="photo-grid__info">
