--- a/index.html
+++ b/index.html
@@ -23,19 +23,25 @@
           alt="Аватар пользователя"
         />
         <div class="profile__info">
-          <div class="profile__info-edit-wrapper">
+          <div class="profile__wrapper">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
-            <button class="profile__edit-button" type="button"></button>
+            <button
+              class="profile__edit-button"
+              type="button"
+              aria-label="Редактировать профиль"
+            ></button>
           </div>
-          <p class="profile__job">Исследователь океана</p>
+          <p class="profile__description">Исследователь океана</p>
         </div>
-        <button class="profile__add-button" type="button"></button>
+        <button
+          class="profile__add-button"
+          type="button"
+          aria-label="Добавить карточку"
+        ></button>
       </section>
 
       <section class="photo-grid">
-        <ul class="photo-grid__list">
-
-        </ul>
+        <ul class="photo-grid__list"></ul>
       </section>
     </main>
 
@@ -43,7 +49,7 @@
       <p class="footer__copyright">© 2020 Mesto Russia</p>
     </footer>
 
-    <section class="popup">
+    <section class="popup popup_type_profile-edit">
       <div class="popup__container">
         <button
           class="popup__close-button"
@@ -51,91 +57,111 @@
           aria-label="Закрыть"
         ></button>
         <h2 class="popup__form-heading">Редактировать профиль</h2>
-        <form class="popup__form" name="edit-profile">
+        <form
+          class="popup__form popup__form_type_profile-edit"
+          name="profile-edit"
+        >
           <div class="popup__main-container">
             <fieldset class="popup__form-input-container">
               <input
-                class="popup__text-input popup__text-input_edit_name-profile"
+                class="popup__data-input popup__data-input_type_profile-name"
                 type="text"
-                name="popup__text-input_edit_name-profile"
+                name="profile-name"
                 placeholder="Имя"
                 required
               />
               <input
-                class="popup__text-input popup__text-input_edit_job-profile"
+                class="popup__data-input popup__data-input_type_profile-description"
                 type="text"
-                name="popup__text-input_edit_job-profile"
+                name="profile-description"
                 placeholder="О себе"
                 required
               />
             </fieldset>
-            <button class="popup__form-submit" type="submit">Сохранить</button>
+            <button
+              class="popup__form-submit"
+              type="submit"
+              aria-label="Сохранить изменения"
+            >
+              Сохранить
+            </button>
           </div>
         </form>
       </div>
     </section>
 
-    <section class="popup popup_add-card">
+    <section class="popup popup_type_card-add">
       <div class="popup__container">
         <button
-          class="popup__close-button popup__close-button_add-card"
+          class="popup__close-button"
           type="button"
           aria-label="Закрыть"
         ></button>
         <h2 class="popup__form-heading">Новое место</h2>
-        <form class="popup__form popup__form_element_add-card" name="add-card">
+        <form class="popup__form popup__form_type_card-add" name="card-add">
           <div class="popup__main-container">
             <fieldset class="popup__form-input-container">
               <input
-                class="popup__text-input popup__text-input_element_name-add-card"
+                class="popup__data-input popup__data-input_type_card-name"
                 type="text"
-                name="popup__text-input_element_name-add-card"
+                name="card-name"
                 placeholder="Название"
                 required
               />
               <input
-                class="popup__text-input popup__text-input_element_link-add-card"
-                type="text"
-                name="popup__text-input_element_link-add-card"
+                class="popup__data-input popup__data-input_type_card-link"
+                type="url"
+                name="card-link"
                 placeholder="Ссылка на картинку"
                 required
               />
             </fieldset>
-            <button class="popup__form-submit" type="submit">Создать</button>
+            <button
+              class="popup__form-submit"
+              type="submit"
+              aria-label="Создать карточку"
+            >
+              Создать
+            </button>
           </div>
         </form>
       </div>
     </section>
 
-    <section class="popup popup_overview">
-      <div class="popup__container popup__container-overview">
+    <section class="popup popup_type_overview">
+      <div class="popup__container popup__container_place_overview">
         <button
-          class="popup__close-button popup__close-button_overview"
+          class="popup__close-button"
           type="button"
           aria-label="Закрыть"
         ></button>
         <div class="overview">
-          <img class="overview__image" src="" alt="" />
+          <img class="overview__image" src="#" alt="#" />
           <p class="overview__title"></p>
         </div>
       </div>
     </section>
 
-    <template class="template-cards">
-      <li class="photo-grid__item">
-        <img
-          class="photo-grid__image"
-          src=""
-          alt=""
-        />
-        <button class="photo-grid__delete-button" type="button"></button>
-        <div class="photo-grid__info">
-          <h2 class="photo-grid__title"></h2>
-          <button class="photo-grid__like" type="button"></button>
+    <template class="template-card">
+      <li class="card">
+        <img class="card__image" src="#" alt="#" />
+        <button
+          class="card__delete-button"
+          type="button"
+          aria-label="Удалить карточку"
+        ></button>
+        <div class="card__info">
+          <h2 class="card__title"></h2>
+          <button
+            class="card__like-button"
+            type="button"
+            aria-label="Мне нравится"
+          ></button>
         </div>
       </li>
     </template>
 
+    <script src="scripts/cards.js"></script>
     <script src="scripts/index.js"></script>
   </body>
 </html>
