--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./pages/index.css" />
     <title>Mesto</title>
   </head>
   <body class="page">
     <header class="header">
       <img
         class="header__logo"
-        src="./images/header-logo.svg"
+        src="<%=require('./images/header-logo.svg')%>"
         alt="Лого Место Россия"
       />
     </header>
@@ -19,7 +18,7 @@
       <section class="profile">
         <img
           class="profile__avatar"
-          src="./images/avatar.jpg"
+          src="<%=require('./images/avatar.jpg')%>"
           alt="Аватар пользователя"
         />
         <div class="profile__info">
@@ -191,7 +190,5 @@
         </div>
       </li>
     </template>
-
-    <script type="module" src="scripts/index.js"></script>
   </body>
 </html>
