--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
               <input
                 class="popup__data-input popup__data-input_type_profile-name"
                 type="text"
-                name="profile-name"
+                name="name"
                 placeholder="Имя"
                 required
                 minlength="2"
@@ -80,7 +80,7 @@
               <input
                 class="popup__data-input popup__data-input_type_profile-description"
                 type="text"
-                name="profile-description"
+                name="description"
                 placeholder="О себе"
                 required
                 minlength="2"
@@ -122,7 +122,7 @@
               <input
                 class="popup__data-input popup__data-input_type_card-name"
                 type="text"
-                name="card-name"
+                name="name"
                 placeholder="Название"
                 required
                 minlength="2"
@@ -136,7 +136,7 @@
               <input
                 class="popup__data-input popup__data-input_type_card-link"
                 type="url"
-                name="card-link"
+                name="link"
                 placeholder="Ссылка на картинку"
                 required
                 id="card-link-input"
