--- a/src/index.html
+++ b/src/index.html
@@ -16,11 +16,18 @@
 
     <main class="content">
       <section class="profile">
-        <img
-          class="profile__avatar"
-          src="<%=require('./images/avatar.jpg')%>"
-          alt="Аватар пользователя"
-        />
+        <div class="profile__avatar-container">
+          <img
+            class="profile__avatar"
+            src="<%=require('./images/avatar.jpg')%>"
+            alt="Аватар пользователя"
+          />
+          <button
+            class="profile__avatar-button"
+            type="button"
+            aria-label="Изменить аватар"
+          ></button>
+        </div>
         <div class="profile__info">
           <div class="profile__wrapper">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -80,7 +87,7 @@
               <input
                 class="popup__data-input popup__data-input_type_profile-description"
                 type="text"
-                name="description"
+                name="about"
                 placeholder="О себе"
                 required
                 minlength="2"
@@ -158,6 +165,46 @@
       </div>
     </section>
 
+    <section class="popup popup_type_change-avatar">
+      <div class="popup__container">
+        <button
+          class="popup__close-button"
+          type="button"
+          aria-label="Закрыть"
+        ></button>
+        <h2 class="popup__form-heading">Обновить аватар</h2>
+        <form
+          class="popup__form popup__form_type_change-avatar"
+          name="avatar"
+          novalidate
+        >
+          <div class="popup__main-container">
+            <fieldset class="popup__form-input-container">
+              <input
+                class="popup__data-input popup__data-input_type_avatar-link"
+                type="url"
+                name="avatar"
+                placeholder="Ссылка на аватар"
+                required
+                id="avatar-link-input"
+              />
+              <span
+                class="popup__error popup__error_visible"
+                id="avatar-link-input-error"
+              ></span>
+            </fieldset>
+            <button
+              class="popup__form-submit"
+              type="submit"
+              aria-label="Обновить аватар"
+            >
+              Сохранить
+            </button>
+          </div>
+        </form>
+      </div>
+    </section>
+
     <section class="popup popup_type_overview">
       <div class="popup__container popup__container_place_overview">
         <button
@@ -172,6 +219,32 @@
       </div>
     </section>
 
+    <section class="popup popup_type_сonfirmation">
+      <div class="popup__container">
+        <button
+          class="popup__close-button"
+          type="button"
+          aria-label="Закрыть"
+        ></button>
+        <h2 class="popup__form-heading">Вы уверены?</h2>
+        <form
+          class="popup__form popup__form_type_сonfirmation"
+          name="сonfirmation"
+          novalidate
+        >
+          <div class="popup__main-container">
+            <button
+              class="popup__form-submit"
+              type="submit"
+              aria-label="Да"
+            >
+              Да
+            </button>
+          </div>
+        </form>
+      </div>
+    </section>
+
     <template class="template-card">
       <li class="card">
         <img class="card__image" src="#" alt="#" />
@@ -182,11 +255,14 @@
         ></button>
         <div class="card__info">
           <h2 class="card__title"></h2>
-          <button
-            class="card__like-button"
-            type="button"
-            aria-label="Мне нравится"
-          ></button>
+          <div class="card__like-container">
+            <button
+              class="card__like-button"
+              type="button"
+              aria-label="Мне нравится"
+            ></button>
+            <p class="card__like-count">6</p>
+          </div>
         </div>
       </li>
     </template>
