--- a/src/index.html
+++ b/src/index.html
@@ -219,7 +219,7 @@
       </div>
     </section>
 
-    <section class="popup popup_type_сonfirmation">
+    <section class="popup popup_type_сonfirm">
       <div class="popup__container">
         <button
           class="popup__close-button"
@@ -228,7 +228,7 @@
         ></button>
         <h2 class="popup__form-heading">Вы уверены?</h2>
         <form
-          class="popup__form popup__form_type_сonfirmation"
+          class="popup__form popup__form_type_сonfirm"
           name="сonfirmation"
           novalidate
         >
